crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_single_pk_snapshot@basic_single_pk_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Users(models.Model):
    id = models.IntegerField(primary_key=True)
    display_name = models.TextField(null=True, blank=True)

    class Meta:
        db_table = "users"
