crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_single_pk_snapshot@basic_single_pk_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Users struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    DisplayName *string `gorm:"column:display_name;type:text" json:"display_name"`
}

func (Users) TableName() string { return "users" }
