crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__binding_collisions_snapshot@binding_collisions_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class UserRelations(models.Model):
    id = models.IntegerField(primary_key=True)
    kind = models.TextField()

    class Meta:
        db_table = "user_relations"

class User(models.Model):
    id = models.IntegerField(primary_key=True)

    class Meta:
        db_table = "user"

class Sql(models.Model):
    id = models.IntegerField(primary_key=True)
    amount = models.IntegerField()

    class Meta:
        db_table = "sql"

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user = models.ForeignKey("User", on_delete=models.RESTRICT, related_name="+")

    class Meta:
        db_table = "posts"
