crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__complex_types_snapshot@complex_types_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class ComplexTypes(models.Model):
    id = models.IntegerField(primary_key=True)
    varchar_col = models.CharField(max_length=100)
    char_col = models.CharField(max_length=10)
    numeric_col = models.DecimalField(max_digits=10, decimal_places=2)
    custom_col = models.TextField()

    class Meta:
        db_table = "complex_types"
